[Block] - Adds pointer:fine query to prevent hover on mobile

--- a/components/accessories/styles/block.module.css
+++ b/components/accessories/styles/block.module.css
@@ -34,9 +34,11 @@
 }
 
 .interactive {
-    &:hover {
-        &:after {
-            transform: translateY(-48px);
+    @media (pointer: fine) {
+        &:hover {
+            &:after {
+                transform: translateY(-48px);
+            }
         }
     }
 }
